fix description width on smaller screens

--- a/css/main.css
+++ b/css/main.css
@@ -12,7 +12,7 @@
   top: 0;
   left: 20px;
   height: 100px;
-  width: 650px;
+  max-width: 650px;
   margin: 5px 15px;
   color: white;
   font-family: Helvetica, Arial, sans-serif;
